use upstream conform compatible schema

--- a/config/metricman.conf
+++ b/config/metricman.conf
@@ -2,9 +2,9 @@
 ## Metrics - SECTION
 
 # Influxdb configuration in form of <user>:<password>@<host>[:<port>]/<database>
-influx.db = http://127.0.0.1:8086/default_db
+metrics.influx.db = http://127.0.0.1:8086/default_db
 # Influxdb additional tags for each metric in form of <key>:<value>,...
-influx.tags = node:node_name,region:de
+metrics.influx.tags = node:node_name,region:de
 # Set window size in ms for batch sending.
 # This means reported will collect measurements within this interval and send all measurements in one packet.
-influx.batch_window_size = 0
+metrics.influx.batch_window_size = 0
