--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+before_script:
+    - export PATH=$PATH:~/.mix/
 language: elixir
 sudo: false
 elixir:
-  - 1.1.0
-  - 1.2.0
+    - 1.3.4
+    - 1.4.5
 otp_release:
-    - 17.5
-    - 18.0
+    - 19.3
